# ADBHelper

./: .gitignore  ADB 协议.md  AppHeader.qml  CMakeLists.txt  adb.vsdx  adbengine.h  main.cpp  main.qml  qml.qrc
adb/: ADB.sln  ADB.vcxproj  OVERVIEW.TXT  README.md  adb.cpp  adb_io.cpp  adb_io.h  adb_io_test.cpp  adb_listeners.h  adb_trace.h  adb_unique_fd.h  adb_utils_test.cpp  bugreport_test.cpp  commandline.cpp  commandline.h  diagnose_usb.cpp  diagnose_usb.h  fdevent.cpp  fdevent.h  fdevent_test.h  file_sync_client.cpp  file_sync_service.cpp  framebuffer_service.cpp  jdwp_service.cpp  protocol.txt  remount_service.cpp  services.cpp  set_verity_enable_state_service.cpp  shell_service.cpp  shell_service_protocol_test.cpp  socket.h  socket_spec.cpp  socket_spec.h  socket_test.cpp  (+7 more)
adb-cli/: Cargo.toml
adb-cli/src/: bus.rs  command.rs  crypto.rs  keycode.rs  lib.rs  protocol.rs  util.rs
adb-source/: Android.mk  SERVICES.TXT  adb_client.cpp  adb_listeners_test.cpp  adb_utils.h  bugreport.cpp  console.cpp  security_log_tags.h  shell_service.h  shell_service_protocol.cpp  shell_service_test.cpp  socket_spec_test.cpp  transport_mdns_unsupported.cpp
adb-src/: adb.h  adb_auth.h  adb_auth_host.cpp  adb_client.h  adb_listeners.cpp  adb_trace.cpp  adb_utils.cpp  adbd_auth.cpp  bugreport.h  fdevent_test.cpp  file_sync_service.h  line_printer.cpp  line_printer.h  sysdeps.h  sysdeps_test.cpp  sysdeps_win32_test.cpp  transport.cpp  transport_local.cpp  transport_mdns.cpp  usb.h
adb-ui/: AppHeader.qml  CMakeLists.txt  QADBHelper_zh_CN.ts  adbengine.cpp  icons.qrc  main.cpp
(+18 files in other folders)
