[package]
edition = "2018"
name = "adb"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
base64 = "0.13.0"
byteorder = "1.4.3"
bytes = "1.0.1"
async-std = { version = "1.9.0", features = ["attributes"] }
openssl = { version = "0.10.35", features = ["vendored"] }
crossbeam="0.8.1"